# our-lady-book-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SESSION_LOG_2026_04_21.md  mypy.ini  openclaw.json  pyproject.toml  ruff.toml
.github/ISSUE_TEMPLATE/: reader_feedback.yml
.planning/: OPERATOR_QUEUE.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/feedback/: FEEDBACK.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
_coordination/: scribe_pipeline_state.json
canon/: chapter_01.md  chapter_02.md  chapter_04.md  chapter_05.md  chapter_07.md  chapter_08.md  chapter_09.md  chapter_11.md  chapter_14.md  chapter_15.md  chapter_17.md  chapter_18.md  chapter_19.md  chapter_21.md  chapter_22.md  chapter_23.md
config/: canonical_quantities_seed.yaml  mode_preflags.yaml  mode_thresholds.yaml  pov_locks.yaml  pricing.yaml  rag_retrievers.yaml  rubric.yaml  voice_pin.yaml  voice_samples.yaml
config/systemd/: vllm-paul-voice.service.j2
config/voice_anchors/: anchor_set_v1.yaml
docs/: ARCHITECTURE.md  PIPELINE.md  _config.yml  gallery.md  index.md  self-portrait.md
docs/ADRs/: 001-mode-dial-over-promotion-ladder.md  002-scene-gen-chapter-commit.md  003-testbed-framing.md  004-book-first-extract-kernel-later.md
docs/_includes/: feedback-script.html  hero-carousel.html  mermaid.html
docs/chapters/: chapter_01.md  chapter_02.md  chapter_03.md  chapter_04.md  chapter_05.md  chapter_06.md  chapter_07.md  chapter_08.md  chapter_09.md  chapter_10.md  chapter_11.md  chapter_12.md  chapter_13.md  chapter_14.md  chapter_15.md  chapter_17.md  chapter_18.md  chapter_19.md  chapter_20.md  chapter_21.md  chapter_22.md  chapter_23.md  chapter_24.md  chapter_26.md
docs/retrospectives/: chapter_01.md  chapter_02.md  chapter_03.md  chapter_04.md  chapter_09.md  chapter_15.md  chapter_17.md  chapter_18.md  chapter_19.md  chapter_20.md  chapter_21.md  chapter_22.md  chapter_23.md  chapter_24.md  chapter_26.md
docs/screenplay/: chapter_01.html  index.md
drafts/ch01/: ch01_sc01.md  ch01_sc02.md  ch01_sc03.md
drafts/screenplay/: chapter_01.fountain
entity-state/: chapter_01_entities.json  chapter_02_entities.json  chapter_03_entities.json  chapter_04_entities.json  chapter_09_entities.json  chapter_15_entities.json  chapter_17_entities.json  chapter_18_entities.json  chapter_19_entities.json  chapter_20_entities.json  chapter_21_entities.json  chapter_22_entities.json  chapter_23_entities.json  chapter_24_entities.json  chapter_26_entities.json
openclaw/: cron_jobs.json
retrospectives/: chapter_03.md  chapter_04.md  chapter_17.md  chapter_20.md  chapter_22.md  chapter_23.md  chapter_24.md
runs/: HANDOFF_2026-04-24.md  HANDOFF_2026-04-25.md
runs/incidents/: INCIDENT_2026-04-24_first_vllm_boot.md
runs/smoke/: ch01_sc01_rev3_postprocess_clean_2026-04-24.md  first_full_scene_loop_ch01_sc01_2026-04-24.md  first_paul_voice_response_2026-04-24.md
scenes/ch01/: ch01_sc01.yaml  ch01_sc02.yaml  ch01_sc03.yaml
scenes/ch02/: ch02_sc01.yaml  ch02_sc02.yaml  ch02_sc03.yaml
scenes/ch03/: ch03_sc01.yaml  ch03_sc02.yaml  ch03_sc03.yaml
scenes/ch04/: ch04_sc01.yaml  ch04_sc02.yaml  ch04_sc03.yaml
scenes/ch05/: ch05_sc01.yaml  ch05_sc02.yaml  ch05_sc03.yaml
scenes/ch06/: ch06_sc01.yaml  ch06_sc02.yaml  ch06_sc03.yaml
scenes/ch07/: ch07_sc01.yaml  ch07_sc02.yaml  ch07_sc03.yaml
scenes/ch08/: ch08_sc01.yaml  ch08_sc02.yaml  ch08_sc03.yaml
scenes/ch09/: ch09_sc01.yaml  ch09_sc02.yaml  ch09_sc03.yaml
scenes/ch10/: ch10_sc01.yaml  ch10_sc02.yaml  ch10_sc03.yaml
scenes/ch11/: ch11_sc01.yaml  ch11_sc02.yaml  ch11_sc03.yaml
scenes/ch12/: ch12_sc01.yaml  ch12_sc02.yaml  ch12_sc03.yaml
scenes/ch13/: ch13_sc01.yaml  ch13_sc02.yaml  ch13_sc03.yaml
scenes/ch14/: ch14_sc01.yaml  ch14_sc02.yaml  ch14_sc03.yaml
scenes/ch15/: ch15_sc01.yaml  ch15_sc02.yaml  ch15_sc03.yaml
scenes/ch16/: ch16_sc01.yaml  ch16_sc02.yaml  ch16_sc03.yaml
scenes/ch17/: ch17_sc01.yaml  ch17_sc02.yaml  ch17_sc03.yaml
scenes/ch18/: ch18_sc01.yaml  ch18_sc02.yaml  ch18_sc03.yaml
scenes/ch19/: ch19_sc01.yaml  ch19_sc02.yaml  ch19_sc03.yaml
scenes/ch20/: ch20_sc01.yaml  ch20_sc02.yaml  ch20_sc03.yaml
scenes/ch21/: ch21_sc01.yaml  ch21_sc02.yaml  ch21_sc03.yaml
scenes/ch22/: ch22_sc01.yaml  ch22_sc02.yaml  ch22_sc03.yaml
scenes/ch23/: ch23_sc01.yaml  ch23_sc02.yaml  ch23_sc03.yaml
scenes/ch24/: ch24_sc01.yaml  ch24_sc02.yaml  ch24_sc03.yaml
scenes/ch25/: ch25_sc01.yaml  ch25_sc02.yaml  ch25_sc03.yaml
scenes/ch26/: ch26_sc01.yaml  ch26_sc02.yaml  ch26_sc03.yaml
scenes/ch27/: ch27_sc01.yaml  ch27_sc02.yaml  ch27_sc03.yaml
scripts/: build_pdf.py  generate_images.sh  install_scribe_heartbeat_timer.sh  lint_imports.sh  read_feedback.sh  redeploy_voice_pin.sh  render_reader.sh  v7d_redeploy_preview.sh
src/book_pipeline/: __init__.py  __main__.py
systemd/: scribe-heartbeat-tier.service  scribe-heartbeat-tier.timer
tests/: conftest.py  test_cli_skeleton.py  test_config.py  test_event_logger.py  test_import_contracts.py  test_interfaces.py  test_lint_rule_catches_violation.py  test_openclaw.py  test_smoke_event_cli.py  test_types.py  test_validate_config_cli.py
tests/ablation/: test_harness.py
tests/alerts/: test_cooldown.py  test_taxonomy.py  test_telegram.py
tests/book_specifics/: test_heading_classifier.py
tests/chapter_assembler/: test_concat.py  test_dag.py  test_git_commit.py  test_quote_normalizer.py  test_scene_kick.py
tests/cli/: test_ablate_cli.py  test_chapter_cli.py  test_chapter_status_cli.py  test_check_cron_freshness.py  test_curate_anchors.py  test_curate_voice_samples.py  test_draft_escalation.py  test_draft_loop.py  test_draft_spend_cap.py  test_entity_list.py  test_ingest_arc_reindex.py  test_ingest_events.py  test_nightly_run.py  test_pin_voice.py  test_register_cron.py  test_vllm_bootstrap.py
tests/corpus_ingest/: test_canonical_quantities.py  test_corpus_paths.py  test_ingester.py  (+2 more)
theses/: README.md
worker/: README.md  feedback-worker.js  wrangler.toml
(+360 files in other folders)
