[project]
name = "book_pipeline"
version = "0.1.0"
description = "Autonomous book-drafting pipeline for Our Lady of Champion — voice-FT drafter + frontier critic + typed RAG"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "Proprietary"}
authors = [{name = "Paul Logan"}]
dependencies = [
  "anthropic>=0.96.0,<0.97",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "PyYAML>=6.0",
  "lancedb>=0.30.2",
  "sentence-transformers>=3.3",
  "httpx>=0.27",
  "tenacity>=9.0",
  "python-json-logger>=3.0",
  "xxhash>=3.0",
  "tiktoken",
]

[project.scripts]
book-pipeline = "book_pipeline.cli.main:main"

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio",
  "ruff",
  "mypy",
  "pre-commit",
  "rich>=13.0",
  "import-linter>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/book_pipeline"]

[tool.hatch.build.targets.sdist]
include = ["src/book_pipeline", "config", "README.md"]

[tool.importlinter]
root_packages = ["book_pipeline"]

[[tool.importlinter.contracts]]
# Contract extension policy (matches scripts/lint_imports.sh mypy-targets policy):
#   When Phase 2+ adds a new kernel package, that plan's PR appends the new
#   module to this source_modules list in the same PR. import-linter 2.x is
#   strict about missing modules ("Module 'X' does not exist"), so we only
#   list modules that exist TODAY. Future kernel modules pre-listed here
#   would break lint-imports until they land.
# Phase 2 plan 01 added: "book_pipeline.rag"
# Phase 2 plan 02 added: "book_pipeline.corpus_ingest"
# Phase 3 will add: "book_pipeline.drafter", "book_pipeline.regenerator"
# Phase 4 will add: "book_pipeline.critic"
# Phase 5 will add: "book_pipeline.orchestration"
name = "Kernel packages MUST NOT import from book_specifics"
type = "forbidden"
source_modules = [
    "book_pipeline.interfaces",
    "book_pipeline.observability",
    "book_pipeline.stubs",
    "book_pipeline.config",
    "book_pipeline.cli",
    "book_pipeline.openclaw",
    "book_pipeline.rag",
    "book_pipeline.corpus_ingest",
]
forbidden_modules = [
    "book_pipeline.book_specifics",
]
# CLI-composition exemption (Phase 2 Plan 02): book_pipeline.cli.ingest is the
# documented composition seam that wires kernel (corpus_ingest) with
# book-specific CORPUS_FILES + heading_classifier. Every other kernel module
# stays ignorant of book_specifics.
ignore_imports = [
    "book_pipeline.cli.ingest -> book_pipeline.book_specifics.corpus_paths",
    "book_pipeline.cli.ingest -> book_pipeline.book_specifics.heading_classifier",
]

[[tool.importlinter.contracts]]
# Same extension policy — append concrete kernel packages as they land.
# Contract-2 extension semantics: interfaces MUST NOT depend on any concrete.
# Each new kernel concrete is appended to `forbidden_modules` here (NOT to
# source_modules — that list is frozen at `interfaces` only; contract-2 protects
# the interfaces package, full stop).
# Phase 2 plan 01 added: "book_pipeline.rag" in forbidden_modules.
# Phase 2 plan 02 added: "book_pipeline.corpus_ingest" in forbidden_modules.
# Phase 3 will add: "book_pipeline.drafter", "book_pipeline.regenerator"
# Phase 4 will add: "book_pipeline.critic"
# Phase 5 will add: "book_pipeline.orchestration"
name = "Interfaces MUST NOT import from concrete kernel implementations"
type = "forbidden"
source_modules = [
    "book_pipeline.interfaces",
]
forbidden_modules = [
    "book_pipeline.observability",
    "book_pipeline.stubs",
    "book_pipeline.rag",
    "book_pipeline.corpus_ingest",
]
ignore_imports = []
