[project]
name = "book_pipeline"
version = "0.1.0"
description = "Autonomous book-drafting pipeline for Our Lady of Champion — voice-FT drafter + frontier critic + typed RAG"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "Proprietary"}
authors = [{name = "Paul Logan"}]
dependencies = [
  "anthropic>=0.96.0,<0.97",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "PyYAML>=6.0",
  "lancedb>=0.30.2",
  "sentence-transformers>=3.3",
  "httpx>=0.27",
  "tenacity>=9.0",
  "jinja2>=3.1",
  "python-json-logger>=3.0",
  "xxhash>=3.0",
  "tiktoken",
]

[project.scripts]
book-pipeline = "book_pipeline.cli.main:main"

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio",
  "ruff",
  "mypy",
  "pre-commit",
  "rich>=13.0",
  "import-linter>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/book_pipeline"]

[tool.hatch.build.targets.sdist]
include = ["src/book_pipeline", "config", "README.md"]

[tool.pytest.ini_options]
# Phase 2 Plan 06: register slow marker (RAG-04 end-to-end gate uses this).
# Tests marked `@pytest.mark.slow` require indexes/ populated + real BGE-M3
# + BGE reranker-v2-m3 model loads. Default `pytest` run skips them via the
# pre-push hook (`-m "not slow"`); CI / manual runs include them via `-m slow`.
markers = [
    "slow: mark test as slow (requires populated indexes/ + GPU model loads)",
]

[tool.importlinter]
root_packages = ["book_pipeline"]

[[tool.importlinter.contracts]]
# Contract extension policy (matches scripts/lint_imports.sh mypy-targets policy):
#   When Phase 2+ adds a new kernel package, that plan's PR appends the new
#   module to this source_modules list in the same PR. import-linter 2.x is
#   strict about missing modules ("Module 'X' does not exist"), so we only
#   list modules that exist TODAY. Future kernel modules pre-listed here
#   would break lint-imports until they land.
# Phase 2 plan 01 added: "book_pipeline.rag"
# Phase 2 plan 02 added: "book_pipeline.corpus_ingest"
# Phase 3 plan 01 added: drafter, critic, regenerator, voice_fidelity
# Phase 3 gap-closure (2026-04-21) added: llm_clients
# Phase 4 plan 01 added: chapter_assembler, entity_extractor, retrospective, ablation
# Phase 5 will add: "book_pipeline.orchestration"
name = "Kernel packages MUST NOT import from book_specifics"
type = "forbidden"
source_modules = [
    "book_pipeline.interfaces",
    "book_pipeline.observability",
    "book_pipeline.stubs",
    "book_pipeline.config",
    "book_pipeline.cli",
    "book_pipeline.openclaw",
    "book_pipeline.rag",
    "book_pipeline.corpus_ingest",
    # Phase 3 plan 01 added: drafter, critic, regenerator, voice_fidelity
    "book_pipeline.drafter",
    "book_pipeline.critic",
    "book_pipeline.regenerator",
    "book_pipeline.voice_fidelity",
    # Phase 3 gap-closure (2026-04-21): claude-code CLI backend shim.
    "book_pipeline.llm_clients",
    # Phase 4 plan 01 added: chapter_assembler, entity_extractor, retrospective, ablation
    "book_pipeline.chapter_assembler",
    "book_pipeline.entity_extractor",
    "book_pipeline.retrospective",
    "book_pipeline.ablation",
]
forbidden_modules = [
    "book_pipeline.book_specifics",
]
# CLI-composition exemption (Phase 2 Plan 02 + 06): book_pipeline.cli.* modules
# are documented composition seams that wire kernel packages with book-specific
# tables (corpus_paths, heading_classifier, nahuatl_entities). Every other
# kernel module stays ignorant of book_specifics.
# Plan 02-06 addition: cli._entity_list bridges to nahuatl_entities for the
# W-1 entity_list DI seam on ContextPackBundlerImpl.
ignore_imports = [
    "book_pipeline.cli.ingest -> book_pipeline.book_specifics.corpus_paths",
    "book_pipeline.cli.ingest -> book_pipeline.book_specifics.heading_classifier",
    "book_pipeline.cli._entity_list -> book_pipeline.book_specifics.nahuatl_entities",
    # Plan 03-02 addition: curate-anchors bridges to book-domain anchor pointers
    # (paul-thinkpiece-pipeline training rows + held-out blog posts). OBS-03
    # anchor curation is the CLI composition seam, same pattern as cli.ingest.
    "book_pipeline.cli.curate_anchors -> book_pipeline.book_specifics.anchor_sources",
    # Plan 03-03 addition: vllm-bootstrap bridges to paul-voice endpoint + LoRA
    # module constants (port 8002, LORA_MODULE_NAME='paul-voice',
    # HEALTH_POLL_TIMEOUT_S). CLI composition seam — kernel drafter/vllm_client
    # stays ignorant of these book-domain values.
    "book_pipeline.cli.vllm_bootstrap -> book_pipeline.book_specifics.vllm_endpoints",
    # Plan 03-07 addition: cli.draft is the full scene-loop composition root
    # (bundler + drafter + critic + regen + state machine + commit/hardblock).
    # It is the ONLY site in the codebase that instantiates all 6 kernel
    # components together; the 3 book-domain imports below are documented
    # composition seams (ADR-004 / Plan 02-06 precedent).
    #
    # Note (Deviation Rule 1): The plan text specifies 4 exemptions including
    # `cli.draft -> nahuatl_entities`, but cli/draft.py accesses the nahuatl
    # entity set indirectly via cli/_entity_list.build_nahuatl_entity_set()
    # (which already owns its own `cli._entity_list -> nahuatl_entities`
    # exemption above). Adding a duplicate cli.draft -> nahuatl_entities
    # exemption would produce an import-linter "no matches for ignored import"
    # warning (import-linter treats unused exemptions as an error). The plan
    # spec's 4th entry is redundant; 3 exemptions match the actual edges.
    "book_pipeline.cli.draft -> book_pipeline.book_specifics.vllm_endpoints",
    "book_pipeline.cli.draft -> book_pipeline.book_specifics.training_corpus",
    "book_pipeline.cli.draft -> book_pipeline.book_specifics.corpus_paths",
    # Plan 04-05 addition: cli.chapter is the full Phase 4 chapter-DAG
    # composition root. It is the ONLY site that wires the 11 Phase 4
    # kernel deps together with the book-domain scene-count table +
    # corpus paths. Nahuatl entities are accessed indirectly via
    # cli._entity_list (which already owns its own exemption); a duplicate
    # cli.chapter -> nahuatl_entities entry would trigger import-linter's
    # "no matches for ignored import" error (same Plan 03-07 4-exemption
    # deviation Rule 1 precedent: 2 exemptions match the actual edges).
    "book_pipeline.cli.chapter -> book_pipeline.book_specifics.outline_scene_counts",
    "book_pipeline.cli.chapter -> book_pipeline.book_specifics.corpus_paths",
    # Plan 05-01 addition: cli.curate_voice_samples is the CLI composition
    # seam that builds config/voice_samples.yaml from curated 400-600-word
    # passages. It is the ONLY site that imports from
    # book_specifics.voice_samples (DEFAULT_SOURCE_DIRS + GENRE_BALANCE +
    # TARGET_WORD_MIN/MAX + classify_filename). Same CLI-composition-seam
    # pattern as Plan 03-02 curate_anchors → anchor_sources.
    "book_pipeline.cli.curate_voice_samples -> book_pipeline.book_specifics.voice_samples",
]

[[tool.importlinter.contracts]]
# Same extension policy — append concrete kernel packages as they land.
# Contract-2 extension semantics: interfaces MUST NOT depend on any concrete.
# Each new kernel concrete is appended to `forbidden_modules` here (NOT to
# source_modules — that list is frozen at `interfaces` only; contract-2 protects
# the interfaces package, full stop).
# Phase 2 plan 01 added: "book_pipeline.rag" in forbidden_modules.
# Phase 2 plan 02 added: "book_pipeline.corpus_ingest" in forbidden_modules.
# Phase 3 plan 01 added: drafter, critic, regenerator, voice_fidelity
# Phase 4 plan 01 added: chapter_assembler, entity_extractor, retrospective, ablation
# Phase 5 will add: "book_pipeline.orchestration"
name = "Interfaces MUST NOT import from concrete kernel implementations"
type = "forbidden"
source_modules = [
    "book_pipeline.interfaces",
]
forbidden_modules = [
    "book_pipeline.observability",
    "book_pipeline.stubs",
    "book_pipeline.rag",
    "book_pipeline.corpus_ingest",
    # Phase 3 plan 01 added: drafter, critic, regenerator, voice_fidelity
    "book_pipeline.drafter",
    "book_pipeline.critic",
    "book_pipeline.regenerator",
    "book_pipeline.voice_fidelity",
    # Phase 4 plan 01 added: chapter_assembler, entity_extractor, retrospective, ablation
    "book_pipeline.chapter_assembler",
    "book_pipeline.entity_extractor",
    "book_pipeline.retrospective",
    "book_pipeline.ablation",
]
ignore_imports = []
